--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "src/analyzer.js",
   "type": "module",
   "scripts": {
-    "start": "node start-all.js",
+    "start": "node start-production.js",
     "start-all": "node start-all.js",
     "all": "node start-all.js",
     "production": "node start-production.js",
     "prod": "node start-production.js",
+    "dev": "node start-all.js",
     "bot": "node telegram-bot/bot.js",
-    "web": "node web-ui/server.js",
+    "web": "node web-ui/frontend.js",
     "dev-bot": "node --watch telegram-bot/bot.js",
-    "dev-web": "node --watch web-ui/server.js",
+    "dev-web": "node --watch web-ui/frontend.js",
     "dev-all": "node --watch start-all.js",
     "install-playwright": "npx playwright install"
   },
