--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dev-bot": "node --watch telegram-bot/bot.js",
     "dev-web": "node --watch web-ui/frontend.js",
     "dev-all": "node --watch start-all.js",
-    "install-playwright": "npx playwright install"
+    "install-playwright": "npx playwright install",
+    "heroku-postbuild": "npx playwright install chromium --with-deps"
   },
   "keywords": ["twitter", "url-analyzer", "telegram-bot", "web-ui", "ai", "analysis"],
   "author": "",
