--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "dev-bot": "node --watch telegram-bot/bot.js",
     "dev-web": "node --watch web-ui/frontend.js",
     "dev-all": "node --watch start-all.js",
-    "install-playwright": "npx playwright install",
-    "heroku-postbuild": "npx playwright install chromium --with-deps"
+    "install-playwright": "npx playwright install"
   },
   "keywords": ["twitter", "url-analyzer", "telegram-bot", "web-ui", "ai", "analysis"],
   "author": "",
@@ -39,7 +38,7 @@
     "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": "18.x",
+    "npm": "8.x"
   }
 }
